--- a/packages/buttons/src/button/button.module.css
+++ b/packages/buttons/src/button/button.module.css
@@ -40,6 +40,28 @@
   }
 }
 
+.button-content-container {
+  scale: 1;
+  transition: all calc(var(--globals-transition-timing) / 2) ease-in-out;
+
+  &[data-loading="true"] {
+    opacity: 0;
+    scale: 0.9;
+  }
+}
+
+.button-spinner {
+  margin-inline: auto;
+  opacity: 0;
+  scale: 0.6;
+  transition: all calc(var(--globals-transition-timing) / 2) ease-in-out;
+
+  &[data-loading="true"] {
+    scale: 1;
+    opacity: 1;
+  }
+}
+
 .variant-subtle {
   background-color: var(--button-variant-subtle-bg);
   border-color: var(--button-variant-subtle-border-color);
