--- a/apps/next-16/app/globals.css
+++ b/apps/next-16/app/globals.css
@@ -8,6 +8,7 @@
   @import "@uiid/indicators/globals.css";
   @import "@uiid/interactive/globals.css";
   @import "@uiid/layout/globals.css";
+  @import "@uiid/lists/globals.css";
   @import "@uiid/navigation/globals.css";
   @import "@uiid/overlays/globals.css";
   @import "@uiid/tables/globals.css";
