feat: add card stuff to modal

--- a/packages/buttons/src/button/button.module.css
+++ b/packages/buttons/src/button/button.module.css
@@ -81,6 +81,12 @@
   }
 }
 
+.size-xsmall {
+  font-size: var(--button-size-xs-font-size);
+  height: var(--button-size-xs-height);
+  padding-inline: var(--button-size-xs-padding-x);
+}
+
 .size-small {
   font-size: var(--button-size-sm-font-size);
   height: var(--button-size-sm-height);
