refactor: api cleanup, begin profile page

--- a/packages/buttons/src/button/button.module.css
+++ b/packages/buttons/src/button/button.module.css
@@ -116,6 +116,11 @@
   border-radius: 99999px;
 }
 
+.toggle-fullwidth {
+  width: 100%;
+  width: -webkit-fill-available;
+}
+
 .toggle-square {
   aspect-ratio: 1;
   padding-inline: 0;
