--- a/packages/forms/src/input/input.module.css
+++ b/packages/forms/src/input/input.module.css
@@ -8,6 +8,7 @@
   outline-offset: var(--globals-outline-offset);
   padding: var(--forms-padding-y) var(--forms-padding-x);
   transition: all calc(var(--globals-transition-timing) / 2) ease-in-out;
+  line-height: 1;
 
   /** Hover */
   &:hover {
