feat: building a profile

--- a/packages/cards/src/card/card.module.css
+++ b/packages/cards/src/card/card.module.css
@@ -75,6 +75,13 @@
   padding-inline: 0;
 }
 
+.toggle-ghost {
+  padding-block: 0;
+  padding-inline: 0;
+  border: none;
+  background-color: transparent;
+}
+
 .toggle-transparent {
   background-color: transparent;
 }
