--- a/packages/cards/src/card/card.module.css
+++ b/packages/cards/src/card/card.module.css
@@ -7,6 +7,7 @@
   border-radius: var(--globals-border-radius);
   border: var(--globals-border-width) solid var(--globals-border-color);
   padding: var(--globals-padding-y) var(--globals-padding-x);
+  box-shadow: var(--globals-box-shadow);
 
   font-size: var(--typography-text-0-size);
   line-height: var(--typography-text-0-lineHeight);
