--- a/packages/tokens/src/globals.css
+++ b/packages/tokens/src/globals.css
@@ -85,13 +85,7 @@
     box-sizing: border-box;
   }
 
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6,
-  p {
+  :is(h1, h2, h3, h4, h5, h6, p, ul, ol) {
     margin: 0;
     padding: 0;
   }
