refactor: json-render

--- a/apps/json-render/app/globals.css
+++ b/apps/json-render/app/globals.css
@@ -4,3 +4,4 @@
 @import "@uiid/buttons/globals.css";
 @import "@uiid/cards/globals.css";
 @import "@uiid/forms/globals.css";
+@import "@uiid/overlays/globals.css";
