feat: add code-editor to json-render app

--- a/apps/json-render/app/globals.css
+++ b/apps/json-render/app/globals.css
@@ -3,5 +3,6 @@
 @import "@uiid/layout/globals.css";
 @import "@uiid/buttons/globals.css";
 @import "@uiid/cards/globals.css";
+@import "@uiid/code/globals.css";
 @import "@uiid/forms/globals.css";
 @import "@uiid/overlays/globals.css";
