--- a/packages/forms/src/number-field/number-field.module.css
+++ b/packages/forms/src/number-field/number-field.module.css
@@ -41,7 +41,7 @@
   border-radius: var(--globals-border-radius);
   background-color: var(--forms-background);
   background-clip: padding-box;
-  color: var(--shade-accent);
+  color: var(--shade-muted);
   user-select: none;
   transition: all var(--globals-transition-timing) ease-in-out;
 
