--- a/packages/navigation/src/sidebar/subcomponents/sidebar-list.module.css
+++ b/packages/navigation/src/sidebar/subcomponents/sidebar-list.module.css
@@ -10,7 +10,7 @@
   }
 
   [data-slot="list-item"] {
-    color: var(--shade-accent);
+    color: var(--shade-muted);
 
     &:hover {
       color: var(--shade-foreground);
