--- a/packages/navigation/src/sidebar/subcomponents/sidebar-menu-button.module.css
+++ b/packages/navigation/src/sidebar/subcomponents/sidebar-menu-button.module.css
@@ -12,11 +12,11 @@
 
   &:hover {
     background-color: var(--shade-surface);
-    color: var(--shade-accent);
+    color: var(--shade-muted);
   }
 
   &:active {
-    background-color: var(--shade-muted);
+    background-color: var(--shade-accent);
     color: var(--shade-foreground);
   }
 
