--- a/packages/calendars/src/calendars.styles.css
+++ b/packages/calendars/src/calendars.styles.css
@@ -2,8 +2,8 @@
 @import "react-day-picker/style.css";
 
 .rdp-root {
-  --rdp-accent-color: var(--shade-accent);
+  --rdp-muted-color: var(--shade-muted);
   --rdp-day_button-border-radius: var(--globals-border-radius);
-  --rdp-range_middle-background-color: var(--shade-muted);
+  --rdp-range_middle-background-color: var(--shade-accent);
   --rdp-outside-opacity: 0.25;
 }
