--- a/packages/forms/src/combobox/combobox.module.css
+++ b/packages/forms/src/combobox/combobox.module.css
@@ -22,7 +22,7 @@
   cursor: text;
   width: 1.5rem;
   height: 2.5rem;
-  color: var(--shade-accent);
+  color: var(--shade-muted);
   border: none;
   padding: 0;
   border-radius: 0.25rem;
@@ -35,6 +35,6 @@
 
 .combobox-item {
   &:focus-visible {
-    background-color: var(--shade-muted);
+    background-color: var(--shade-accent);
   }
 }
