--- a/packages/forms/src/slider/slider.module.css
+++ b/packages/forms/src/slider/slider.module.css
@@ -10,14 +10,14 @@
   width: 100%;
   height: 0.25rem;
   background-color: var(--shade-halftone);
-  box-shadow: inset 0 0 0 1px var(--shade-muted);
+  box-shadow: inset 0 0 0 1px var(--shade-accent);
   border-radius: 0.25rem;
   user-select: none;
 }
 
 .slider-indicator {
   border-radius: 0.25rem;
-  background-color: var(--shade-accent);
+  background-color: var(--shade-muted);
   user-select: none;
 }
 
@@ -26,7 +26,7 @@
   height: 1rem;
   border-radius: 100%;
   background-color: var(--shade-foreground);
-  outline: 1px solid var(--shae-accent);
+  outline: 1px solid var(--shae-muted);
   user-select: none;
 
   &:has(:focus-visible) {
