--- a/packages/lists/src/list/subcomponents/list-item.module.css
+++ b/packages/lists/src/list/subcomponents/list-item.module.css
@@ -5,7 +5,7 @@
   border-radius: var(--globals-border-radius);
 
   &:not([data-disabled]):where(:hover, [data-highlighted]) {
-    background-color: var(--shade-muted);
+    background-color: var(--shade-accent);
   }
 
   &:where([data-disabled]) {
