--- a/packages/navigation/src/breadcrumbs/subcomponents/breadcrumbs-list.module.css
+++ b/packages/navigation/src/breadcrumbs/subcomponents/breadcrumbs-list.module.css
@@ -2,7 +2,7 @@
   list-style: none;
   padding: 0;
   margin: 0;
-  color: var(--shade-accent);
+  color: var(--shade-muted);
   display: flex;
   flex-wrap: wrap;
   align-items: center;
