--- a/packages/overlays/src/sheet/sheet.module.css
+++ b/packages/overlays/src/sheet/sheet.module.css
@@ -40,7 +40,7 @@
 
 .side-right {
   right: var(--inset);
-  border-left: 1px solid var(--shade-muted);
+  border-left: 1px solid var(--shade-accent);
   &[data-starting-style],
   &[data-ending-style] {
     transform: translate(50%, 0);
@@ -49,7 +49,7 @@
 
 .side-left {
   left: var(--inset);
-  border-right: 1px solid var(--shade-muted);
+  border-right: 1px solid var(--shade-accent);
   &[data-starting-style],
   &[data-ending-style] {
     transform: translate(-50%, 0);
@@ -58,7 +58,7 @@
 
 .side-top {
   top: var(--inset);
-  border-bottom: 1px solid var(--shade-muted);
+  border-bottom: 1px solid var(--shade-accent);
   &[data-starting-style],
   &[data-ending-style] {
     transform: translate(0, -50%);
@@ -67,7 +67,7 @@
 
 .side-bottom {
   bottom: var(--inset);
-  border-top: 1px solid var(--shade-muted);
+  border-top: 1px solid var(--shade-accent);
   &[data-starting-style],
   &[data-ending-style] {
     transform: translate(0, 50%);
