--- a/packages/code/src/code-block/code-block.module.css
+++ b/packages/code/src/code-block/code-block.module.css
@@ -1,6 +1,6 @@
 .code-block {
   position: relative;
-  background-color: rgba(var(--shade-subtle), 0.5);
+  background-color: rgba(var(--shade-surface), 0.5);
   border: 1px solid var(--globals-border-color);
   border-radius: var(--globals-border-radius);
   overflow: hidden;
