feat: improve json-render experience

--- a/packages/code/src/code-block/code-block.module.css
+++ b/packages/code/src/code-block/code-block.module.css
@@ -3,11 +3,14 @@
   background-color: rgba(var(--shade-surface), 0.5);
   border: 1px solid var(--globals-border-color);
   border-radius: var(--globals-border-radius);
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .code-block-header {
+  background-color: var(--shade-surface);
   border-bottom: var(--globals-border-width, 1px) solid var(--globals-border-color, #333);
+  position: sticky;
+  top: 0;
 }
 
 .code-block-copy-button[data-copied="true"] {
