feat: docs, big poppa pr

--- a/packages/layout/src/box/box.module.css
+++ b/packages/layout/src/box/box.module.css
@@ -1,5 +1,8 @@
 .box {
   display: flex;
+  border-color: var(--globals-border-color);
+  border-style: solid;
+  border-width: 0;
 }
 
 .toggle-evenly > * {
