--- a/packages/lists/src/list/subcomponents/list-item.module.css
+++ b/packages/lists/src/list/subcomponents/list-item.module.css
@@ -3,6 +3,7 @@
 .list-item {
   padding: var(--list-item-padding-y) var(--list-item-padding-x);
   border-radius: var(--globals-border-radius);
+  transition: all var(--globals-transition-timing) ease-in-out;
 
   &:not([data-disabled]):where(:hover, [data-highlighted]) {
     background-color: var(--shade-accent);
