--- a/packages/forms/src/textarea/textarea.module.css
+++ b/packages/forms/src/textarea/textarea.module.css
@@ -33,8 +33,8 @@
 
   /** Invalid */
   &[data-invalid] {
-    border-color: var(--tones-negative);
-    outline-color: var(--tones-negative);
+    border-color: var(--tones-critical);
+    outline-color: var(--tones-critical);
   }
 }
 
